09/service-balanced.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-initial-php-apps
    entorno: dev
    run: hello-php
  name: hello-php-balanced
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-initial-php-apps
    entorno: dev
    run: hello-php
  type: LoadBalancer
