09/service-staticip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-initial-php-apps
    entorno: dev
    run: hello-php
  name: hello-php-staticip
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-initial-php-apps
    entorno: dev
    run: hello-php
  type: LoadBalancer
  externalIPs:
    - 192.168.50.11
